--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,20 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-header, main {
+header {
+    background-color: lightseagreen;
+}
+
+ {
+    background-color: #3535ec;
+}
+
+/* header, main {
     margin-bottom: 20px;
+} */
+
+nav {
+    display: inline-block;
 }
 
 .container {
@@ -20,23 +32,40 @@ header, main {
     margin: 0 auto;
 }
 
+
 .my-row {
     display: flex;
     flex-wrap: wrap;
     margin: 0 10px;
+    padding: 10px;
+    text-align: center;
+    justify-content: center;
+    align-self: center;
 }
 
-.my-col-small {
-    width: 30%;
+.my-row > * {
+    margin: 0 10px;
 }
 
-.my-col-big {
-    width: 60%;
+.big-container {
+    background-color: blue;
+    width: 1200px;
+    height: 600px;
 }
+
 
 /* DEBUG */
 
-.debug header, .debug footer {
+/* .debug header, .debug footer {
     background-color: lightgray;
     height: 100px;
+} */
+
+nav > * {
+    background-color: orange;
+    border: 2px dashed black;
+}
+
+div > img, a {
+    padding: 0 50px;
 }
