--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,6 @@ header {
     background-color: lightseagreen;
 }
 
- {
-    background-color: #3535ec;
-}
-
-/* header, main {
-    margin-bottom: 20px;
-} */
-
 nav {
     display: inline-block;
 }
@@ -31,8 +23,12 @@ nav > * {
     background-color: orange;
 }
 
-div > img, a {
-    padding: 0 50px;
+.logo {
+    padding: 0 20px;
+}
+
+.nav-link {
+    padding: 0 20px;
 }
 
 .container {
@@ -40,7 +36,6 @@ div > img, a {
     margin: 0 auto;
     align-items: center;
 }
-
 
 .my-row {
     display: flex;
@@ -56,11 +51,47 @@ div > img, a {
     margin: 0 10px;
 }
 
-.big-container {
-    background-color: blue;
+.my-section {
+    display:flex;
     width: 1200px;
-    height: 600px;
+    height: 400px;
     align-items: center;
+}
+
+#first-section {
+    background-color: blue;
+}
+
+#second-section {
+    background-color: white;
+}
+
+#third-section {
+    background-color: lightgray;
+}
+
+#fifth-section {
+    background-color: gray;
+}
+
+.main-container {
+    height: 300px;
+}
+
+#mc-1 {
+    width: 60%;
+    background-color: dodgerblue;
+}
+
+#mc-2 {
+    width: 40%;
+    background-color: pink;
+}
+
+#mc-3 {
+    background-color: green;
+    width: 100%;
+    height: 80%;
 }
 
 .section-container {
@@ -80,14 +111,14 @@ div > img, a {
     height: 100px;
 } */
 
-nav > * {
+/* nav > * {
     border: 2px dashed black;
-}
+} */
 
 /* div > img, a {
     padding: 0 50px;
 } */
 
-.section-container {
+/* .section-container {
     border: 2px dashed black;
-}
+} */
